--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
       </section>
     </main>
     <h1>hello world we are software developers</h1>
+    <p> i am solomon ayalew from Ethiopa</p>
 
 
     <script  src="js/index.js"></script>
