--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     - The freeCodeCamp Team
 
     -->
-    <h1>hello world</h1>
+    <h1>hello world we are software developers</h1>
 
 
     <script  src="js/index.js"></script>
